Make ohc compilable with Java 11 + runnable w/ any Java version since 8.
Also removes the need for a multi-release jar file.

Introduces a `ByteBufferCompat` class that dynamically generates the adapter byte code.

Speed up unit tests (should have been a separate commit)